# rot13-gtk

./: LICENSE  README.md  configure.ac
data/: Makefile  Makefile.am  Makefile.in  rot13-gtk.desktop  rot13.ui
src/: Makefile.am  main.vala  rot13-gtk.desktop  rot13.vala
src/resources/: rot13-gtk.gresource.xml  rot13.ui
